2006-08-03  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot.cc
	(set_location): Be less strict when validating the location;
	strict validation is already performed in derived chroot types.
	This prevents errors when reading the session configuration.

2006-08-02  Luk Claes  <luk@debian.org>

	* po/sv.po: Update Swedish translation.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth.h (sbuild): Document that the environment
	sanitisation is no longer performed, and this is the caller's
	responsibility.

	* sbuild/sbuild-auth.cc (setupenv): Remove environment
	sanitisation logic, now this is handled in the session code, using
	the chroot and environment filter logic.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc (run_child): Use the chroot
	environment_filter when setting the chroot execution environment.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot.cc: Add environment_filter test.

	* sbuild/sbuild-chroot.cc
	(get_environment_filter): New method.  Get the environment filter
	regex.
	(set_environment_filter): New method.  Set the environment filter
	regex.
	(get_details): Add "Environment Filter" line.
	(get_keyfile): Set "environment-filter" key.
	(set_keyfile): Get "environment-filter" key.

	* sbuild/sbuild-chroot.h: Add environment_filter member, a regular
	expression to filter the environment inside the chroot.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-environment.cc: Add regex filter tests.

	* sbuild/sbuild-environment.cc
	(set_filter): New method.  Set filter regex.
	(get_filter): New method.  Get filter regex.
	(add): Check environment variable name does not match the regex
	before adding it.

	* sbuild/sbuild-environment.h: Add filter member, a regular
	expression to filter the environment.  All operators take a const
	reference as the right-hand side argument.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-run-parts.cc